--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,16 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           
-          name:ConfigureAWS credentials
+          -name:ConfigureAWS credentials
           uses:aws-actions/configure-aws-credentials@v1
-          with:aws-access-key-id:${{secrets.AWS_ACCESS_KEY_ID }}
+          with:
+          aws-access-key-id:${{secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key:${{secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region:eu-west-1
+          
+          -name:Loginto AmazonECR
+          id:login-ecr
+          uses:aws-actions/amazon-ecr-login@v1
+          
+          
+       
